--- a/src/scss/site-header.scss
+++ b/src/scss/site-header.scss
@@ -17,7 +17,6 @@
 }
 
 .dat-logo {
-  width: 6.5rem;
   float: left;
 }
 
@@ -25,7 +24,10 @@
 .dat-button {
   display: inline-block;
   padding-top: .4rem;
+  padding-right: .2rem;
   padding-bottom: .4rem;
+  padding-left: .2rem;
+  background-color: $color-green--hover;
   button {
     &:hover, &:focus, &:active {
       color: $color-neutral--04;
